[gd_scene load_steps=3 format=4]

[ext_resource type="Script" path="res://UI/turns_remaining.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://4261k4ceg7s7" path="res://Art/HourglassIcon.png" id="2"]

[node name="TurnsRemaining" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Text" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 588.0
offset_bottom = 102.0
stretch_mode = 2

[node name="Counter" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Counter"]
layout_mode = 0
offset_left = 234.0
offset_top = 114.0
offset_right = 300.0
offset_bottom = 186.0
texture = ExtResource("2")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="Counter"]
custom_minimum_size = Vector2(192, 72)
layout_mode = 0
offset_left = 318.0
offset_top = 114.0
offset_right = 510.0
offset_bottom = 186.0
pivot_offset = Vector2(24, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="Counter/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(32, 12)
render_target_update_mode = 0

[node name="Label" type="Label" parent="Counter/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "7"

[node name="Last Turn" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Last Turn"]
layout_mode = 0
offset_left = 36.0
offset_top = 114.0
offset_right = 102.0
offset_bottom = 186.0
texture = ExtResource("2")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="Last Turn"]
custom_minimum_size = Vector2(432, 72)
layout_mode = 0
offset_left = 120.0
offset_top = 114.0
offset_right = 552.0
offset_bottom = 186.0
pivot_offset = Vector2(216, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="Last Turn/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(72, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Last Turn/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "last round!"

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
